2021-XX-XX   2.2.3:
-------------------
  * optimize slice assignment with negative step, e.g.: `a[::-1] = 1`


2021-07-16   2.2.2:
-------------------
  * speedup slice assignment, see #132 and #135
  * speedup bitwise operations, #133
  * optimize `getbit()` and `setbit()` in `bitarray.h`
  * fix TypeError messages when bitarray or int (0, 1) are expected (bool
    is a subclass of int)
  * add and improve tests


2021-07-06   2.2.1:
-------------------
  * improve documentation
  * speedup `vl_encode()`
  * `bitarray.h`: make `getbit()` always an (inline) function
  * add assertions in C code


2021-07-03   2.2.0:
-------------------
  * add `bitarray.util.vl_encode()` and `bitarray.util.vl_decode()` which
    uses a [variable length bitarray format](variable_length.rst), #131


2021-06-15   2.1.3:
-------------------
  * Fix building with MSVC / Bullseye, #129


2021-06-13   2.1.2:
-------------------
  * support type hinting for all Python 3 versions (that bitarray supports,
    3.5 and higher currently), fixed #128
  * add explicit endianness to two tests, fixes #127


2021-06-11   2.1.1:
-------------------
  * add type hinting (see PEP 484, 561) using stub (`.pyi`) files
  * add tests


2021-05-05   2.1.0:
-------------------
  * add `.find()` method, see #122
  * `.find()`, `.index()`, `.search()` and `.itersearch()` now all except
    both (sub-) bitarray as well as bool items to be searched for
  * improve encode/decode error messages
  * add [lexicographical permutations example](../examples/lexico.py)
  * add tests


2021-04-19   2.0.1:
-------------------
  * update documentation
  * improve some error messages


2021-04-14   2.0.0:
-------------------
  * require more specific objects, int (0 or 1) or bool, see #119
  * items are always returned as int 0 or 1, #119
  * remove `.length()` method (deprecated since 1.5.1 - use `len()`)
  * in `.unpack()` the `one` argument now defaults to 0x01 (was 0xff)