@@ -1,5 +1,6 @@
 2021-XX-XX   2.2.3:
 -------------------
+  * speed up `repeat()`, #136
   * optimize slice assignment with negative step, e.g.: `a[::-1] = 1`
 
 
